apps/qr-code-generator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qr-code-generator
  labels:
    app.kubernetes.io/part-of: qr-code-generator
    platform.mousses.xyz/admission: audit
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
