apps/qr-code-generator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qr-code-generator
  namespace: qr-code-generator
  labels:
    app.kubernetes.io/name: qr-code-generator
    app.kubernetes.io/part-of: qr-code-generator
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: qr-code-generator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qr-code-generator
        app.kubernetes.io/part-of: qr-code-generator
    spec:
      automountServiceAccountToken: false
      containers:
        - name: qr-code-generator
          image: ghcr.io/petermousses/qr-code-generator@sha256:f342d1d1e18b47ecd1a8528b7fada7cb2b15750a7ed75be090b9d52d3a5300a2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            httpGet:
              path: /
              port: http
            timeoutSeconds: 2
            failureThreshold: 30
            periodSeconds: 2
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 250m
              memory: 128Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
      terminationGracePeriodSeconds: 30
