apps/qr-code-generator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qr-code-generator
  namespace: qr-code-generator
  labels:
    app.kubernetes.io/name: qr-code-generator
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: qr-code-generator
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
